Thu Jun 28 06:19:21 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/TTSCTest/Sender/Sender_exec.cpp:
          Fixed warnings.

Thu Jun 28 06:13:33 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/TTSConnContext/Sender/Sender.mpc:
          Fixed after.

Wed Jun 27 19:07:49 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/Different/Sender/Different_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/Different/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

Wed Jun 27 14:17:56 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender.idl:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.h:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Updater/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

Wed Jun 27 13:34:02 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.h:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

Wed Jun 27 13:07:31 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender.idl:
        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender_exec.h:
        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender_exec.cpp: